jwt token added to the swagger
