# storage/api-docs/api-docs.json
@@ -6,16 +6,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "documentation": {
-            "get": {
-                "operationId": "565349164df8edd1fd876268c4fb0dfd",
-                "responses": {
-                    "200": {
-                        "description": "Documentation endpoint to prevent crashes"
-                    }
-                }
-            }
-        },
         "/api/categories": {
             "get": {
                 "tags": [
@@ -85,7 +75,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/categories/{id}": {
@@ -182,7 +177,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -214,7 +214,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/stickers/{stickerId}/images": {
@@ -342,7 +347,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/stickers/{stickerId}/images/{imageId}": {
@@ -417,7 +427,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -458,7 +473,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/auth/login": {
@@ -713,7 +733,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/auth/refresh": {
@@ -760,16 +785,21 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
-        "/api/auth/current-user": {
+        "/api/auth/user-profile": {
             "get": {
                 "tags": [
                     "Authentication"
                 ],
                 "summary": "Get current user information",
-                "operationId": "4b4363f1b6227396e45c3a8ce7021c2d",
+                "operationId": "093d7c567e71e1e60fcfd98ca5a7555f",
                 "responses": {
                     "200": {
                         "description": "Current user information",
@@ -821,7 +851,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/auth/send-email-verification": {
@@ -1184,7 +1219,7 @@
                 },
                 "security": [
                     {
-                        "jwt": []
+                        "jwt_token": []
                     }
                 ]
             }
@@ -1231,7 +1266,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "jwt_token": []
                     }
                 ]
             },
@@ -1303,7 +1338,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "jwt_token": []
                     }
                 ]
             }
@@ -1368,7 +1403,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "jwt_token": []
                     }
                 ]
             },
@@ -1452,7 +1487,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "jwt_token": []
                     }
                 ]
             },
@@ -1490,7 +1525,7 @@
                 },
                 "security": [
                     {
-                        "bearerAuth": []
+                        "jwt_token": []
                     }
                 ]
             }
@@ -1626,7 +1661,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             }
         },
         "/api/stickers/{id}": {
@@ -1808,7 +1848,12 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -1853,7 +1898,24 @@
                     "403": {
                         "description": "No permissions"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "jwt_token": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "jwt_token": {
+                "type": "http",
+                "description": "JWT Token",
+                "name": "Authorization",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     },
